# overseaark

./: .env.example  .gitignore  README.en.md  README.md  model-manifest.lock.json  overseaark
backend/: pyproject.toml
backend/app/: __init__.py  adapters.py  exporting.py  main.py  models.py  pipeline.py  settings.py  store.py
backend/tests/: test_adversarial_pipeline.py  test_api.py  test_benchmark_process.py  test_command_adapter_protocol.py  test_export_security.py  test_llm_adapter_contract.py  test_upload_boundaries.py  test_video_adapter_contract.py
docs/: ARCHITECTURE.md  COMPETITION.md  CSDN-ARTICLE.md  DEPLOYMENT.md  MODEL_LICENSES.md  PRD-v1.1.md  PRD-v2.0.md  PROJECT-REPORT.md  ULTRAQA-REPORT.md  出海方舟OverseaArk-PRD-v1.0.docx  出海方舟OverseaArk-PRD-v1.1.docx  出海方舟OverseaArk-PRD-v2.0.docx
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: api.ts  campaign.ts  demo.ts  i18n.ts  main.ts  styles.css  types.ts
frontend/tests/: api.test.ts  campaign.test.ts  demo.test.ts  i18n.test.ts
scripts/: benchmark.sh  bootstrap.sh  doctor.sh  lifecycle.sh  llama_server.sh  models.sh  restart.sh  run_benchmark.py  start.sh  status.sh  stop.sh  test.sh  vllm.sh  vllm_server.sh
scripts/adapters/: adapter_common.py  asr_nemo.py  cosmos_local_inference.py  image_step1x.py  llm_step.py  tts_magpie.py  video_cosmos3.py
scripts/lib/: common.sh
tests/e2e/: README.md  mock_overseaark_server.py  run_e2e.py  test_oneclick_start.sh  test_overseaark_e2e.py
tools/: build_prd_docx.py
