[project]
name = "overseaark-backend"
version = "0.1.0"
description = "Local FastAPI backend for OverseaArk campaign processing"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
